fix sign in/sign up forms being off center

--- a/view/public/main.css
+++ b/view/public/main.css
@@ -138,7 +138,7 @@ footer
     padding-top: 2%;
     margin-bottom: 2%;
     padding-bottom: 2%;
-    width: 50%;
+    display: table;
     margin: 0 auto;
 }
 
